@@ -4,6 +4,7 @@ ctyped changelog
 
 Unreleased
 ----------
++ Added CObject convenience.
 + Added support for Python strings as wide chars.
 * Result is now casted with 'errcheck'.
 
